--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -1,8 +1,8 @@
 .hero {
-  background: url('https://images.unsplash.com/photo-1519641471654-76ce0107ad1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2342&q=80')
+  background: url('https://images.hdqwalls.com/wallpapers/ferrari-sf90-stradale-5k-w5.jpg')
     no-repeat center/cover;
   width: 100%;
-  height: 500px;
+  height: 620px;
 
   display: flex;
 }
