--- a/src/components/driver/Driver.module.css
+++ b/src/components/driver/Driver.module.css
@@ -17,7 +17,7 @@
 }
 
 .driver span {
-    color: #593cfb;
+    color: #935f91;
 }
 
 .driver p {
@@ -27,16 +27,21 @@
 }
 
 .driver button {
-    background-color: #593cfb;
+    background-color: #935f91;
     color: #fff;
     font-weight: 600;
     font-size: 1rem;
     padding: 12px 18px;
     border: none;
+    border-radius: 4px;
 }
 
 .driver button:hover {
-    background-color: #4733b7;
+    background-color: white;
+    color: #935f91;
+    border:1px solid #935f91;
+    box-shadow: rgba(0, 0, 0, 0.9) 0px 8px 14px;
+    background-color: rgba(247, 247, 247, 0.9);
     transition: background-color 1s;
 }
 
