--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -16,7 +16,7 @@
 }
 
 .footer button {
-    background-color: #935f91;
+    background-color:  rgb(157, 177, 229);
     color: #fff;
     font-weight: 600;
     font-size: 1rem;
@@ -27,7 +27,7 @@
 
 .footer button:hover {
     background-color: white;
-    color: #935f91;
+    color:  rgb(110, 122, 155);
     box-shadow: rgba(87, 85, 85, 0.9) 0px 8px 14px;
     background-color: rgba(247, 247, 247, 0.9);
     transition: background-color 1s;
