--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -27,7 +27,7 @@ section .color:nth-child(1) {
     top: 100px;
     width: 1000px;
     height: 500px;
-    background: #ff359b;
+    background: #efecec;
 }
 
 section .color:nth-child(2) {
@@ -35,7 +35,7 @@ section .color:nth-child(2) {
     left: 100px;
     width: 700px;
     height: 500px;
-    background: #f6ed2d;
+    background: #9f729d;
 }
 
 section .color:nth-child(3) {
@@ -43,7 +43,7 @@ section .color:nth-child(3) {
     right: 200px;
     width: 700px;
     height: 300px;
-    background: #00d2ff;
+    background: #888181;
 }
 
 .box {
