--- a/src/components/signup/Signup.module.css
+++ b/src/components/signup/Signup.module.css
@@ -18,7 +18,7 @@ section .color:nth-child(1) {
     top: 100px;
     width: 1000px;
     height: 500px;
-    background: #efecec;
+    background: #b9c5ce;
 }
 
 section .color:nth-child(2) {
@@ -34,7 +34,7 @@ section .color:nth-child(3) {
     right: 200px;
     width: 700px;
     height: 300px;
-    background: #888181;
+    background: #739ca4;
 }
 
 .box {
