--- a/src/components/search/Search.module.css
+++ b/src/components/search/Search.module.css
@@ -1,30 +1,124 @@
-.icon_home{
-    display: flex;
-    width: 20px;
-    height: 20px;
-    background-image: url(./home-outline.svg) ;
+.main_container {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-.icon_pro{
+
+.box {
     display: flex;
-    width: 20px;
-    height: 20px;
-    background-image: url(./person-circle-outline.svg) ;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #2f363e;
+
 }
-.icon_message{
+
+.navigation {
+    position: relative;
+    width: 540px;
+    height: 120px;
+    /*background: #ffff;*/
+    box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.25),
+    10px 10px 70px rgba(0, 0, 0, 0.25),
+    inset 5px 5px 10px rgba(0, 0, 0, 0.5),
+    inset 5px 5px 20px rgba(255, 255, 255, 0.2),
+    inset -5px -5px 15px rgba(0, 0, 0, 0.75);
+    border-radius: 30px;
     display: flex;
-    width: 20px;
-    height: 20px;
-    background-image: url(./chatbubble-ellipses-outline.svg) ;
+    justify-content: center;
+    align-items: center;
 }
-.icon_photo{
+
+.navigation li {
+    position: relative;
+    list-style: none;
+    width: 80px;
+    margin: 0 5px;
+}
+
+.navigation li a {
     display: flex;
-    width: 20px;
-    height: 20px;
-    background-image: url(./camera-outline.svg) ;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    /*color: #aaa;*/
 }
-.icon_set{
+
+
+.navigation li a .icon{
+    position: absolute;
+    font-size: 1.75rem;
+    width: 80px;
+    height: 80px;
     display: flex;
-    width: 20px;
-    height: 20px;
-    background-image: url(./settings-outline.svg) ;
+    justify-content: center;
+    align-items: center;
+    color: #aaa;
+    border-radius: 50%;
+
 }
+.navigation li.active a .icon{
+    background: rgba(159, 114, 157, 0.21);
+    color: #ffff;
+
+}
+.navigation li a .icon_home{
+    background-image: url(./home-outline.svg);
+}
+.navigation li a .icon_pro {
+    /*position: absolute;*/
+    /*font-size: 1rem;*/
+    /*display: flex;*/
+    /*width: 80px;*/
+    /*height: 80px;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*color: #aaa;*/
+    /*border-radius: 50%;*/
+    background-image: url(./person-circle-outline.svg);
+}
+
+.navigation li a .icon_message {
+    /*position: absolute;*/
+    /*font-size: 1rem;*/
+    /*display: flex;*/
+    /*width: 80px;*/
+    /*height: 80px;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*color: #aaa;*/
+    /*border-radius: 50%;*/
+    background-image: url(./chatbubble-ellipses-outline.svg);
+}
+
+.navigation li a .icon_photo {
+    /*position: absolute;*/
+    /*font-size: 1rem;*/
+    /*display: flex;*/
+    /*width: 80px;*/
+    /*height: 80px;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*color: #aaa;*/
+    /*border-radius: 50%;*/
+    background-image: url(./camera-outline.svg);
+}
+
+.navigation li a .icon_set {
+    /*position: absolute;*/
+    /*font-size: 1rem;*/
+    /*display: flex;*/
+    /*width: 80px;*/
+    /*height: 80px;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*color: #aaa;*/
+    /*border-radius: 50%;*/
+    background-image: url(./settings-outline.svg);
+}
+
+
+
+
