--- a/src/components/search/Search.module.css
+++ b/src/components/search/Search.module.css
@@ -67,12 +67,21 @@
     inset 2px 2px 3px rgba(255, 255, 255, 0.25),
     inset -3px -3px 5px rgba(0, 0, 0, 0.5);
 }
-.navigation li.active a .icon::before{
+.navigation li a .icon::before{
     content: '';
     position: absolute;
     inset: 10px;
     background: #2f363e;
     border-radius: 50%;
+
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5),
+    inset 2px 2px 3px rgba(255, 255, 255, 0.25),
+    inset -3px -3px 5px rgba(0, 0, 0, 0.5);
+    transform: scale(0);
+    transition: 0.5s;
+}
+.navigation li.active a .icon::before{
+
 }
 
 
